k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-node-app
spec:
  selector:
    app: simple-node-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3030
